--- a/PhotoPicker/Properties/Settings.settings
+++ b/PhotoPicker/Properties/Settings.settings
@@ -1,7 +1,12 @@
 ﻿<?xml version='1.0' encoding='utf-8'?>
-<SettingsFile xmlns="uri:settings" CurrentProfile="(Default)">
-  <Profiles>
-    <Profile Name="(Default)" />
-  </Profiles>
-  <Settings />
+<SettingsFile xmlns="http://schemas.microsoft.com/VisualStudio/2004/01/settings" CurrentProfile="(Default)" GeneratedClassNamespace="PhotoPicker.Properties" GeneratedClassName="Settings">
+  <Profiles />
+  <Settings>
+    <Setting Name="DeleteDestination" Type="System.String" Scope="User">
+      <Value Profile="(Default)">.\deleted</Value>
+    </Setting>
+    <Setting Name="DefaultDeleteDestination" Type="System.String" Scope="User">
+      <Value Profile="(Default)">.\deleted</Value>
+    </Setting>
+  </Settings>
 </SettingsFile>
