SendToRecycleBin settings added

--- a/PhotoPicker/App.config
+++ b/PhotoPicker/App.config
@@ -16,6 +16,12 @@
             <setting name="DefaultDeleteDestination" serializeAs="String">
                 <value>.\deleted</value>
             </setting>
+            <setting name="SendToRecycleBin" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="DefaultSendToRecycleBin" serializeAs="String">
+                <value>False</value>
+            </setting>
         </PhotoPicker.Properties.Settings>
     </userSettings>
 </configuration>
