--- a/PhotoPicker/App.config
+++ b/PhotoPicker/App.config
@@ -22,6 +22,21 @@
             <setting name="DefaultSendToRecycleBin" serializeAs="String">
                 <value>False</value>
             </setting>
+            <setting name="RememberLastPosition" serializeAs="String">
+                <value>True</value>
+            </setting>
+            <setting name="DefaultRememberLastPosition" serializeAs="String">
+                <value>True</value>
+            </setting>
+            <setting name="LastOpenedDirectory" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="LastOpenedDirectoryIndex" serializeAs="String">
+                <value>0</value>
+            </setting>
+            <setting name="LastOpenedFilterIndex" serializeAs="String">
+                <value>0</value>
+            </setting>
         </PhotoPicker.Properties.Settings>
     </userSettings>
 </configuration>
