icon for app added

--- a/PhotoPicker/PhotoPicker.csproj
+++ b/PhotoPicker/PhotoPicker.csproj
@@ -33,6 +33,9 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
+  <PropertyGroup>
+    <ApplicationIcon>cat.ico</ApplicationIcon>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="Microsoft.VisualBasic" />
     <Reference Include="System" />
@@ -129,6 +132,9 @@
     <Resource Include="Resource\open.png" />
     <Resource Include="Resource\prev.png" />
     <Resource Include="Resource\settings.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="cat.ico" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it.
